common-components/ui-components/HistoricalChat/HistoricalChat.scss
@import 'src/styles/tools/spacing';
@import 'src/styles/tools/color';
@import 'src/styles/settings/variables/other';
@import 'src/styles/settings/variables/typography';

.historical-chat {
  $self: &;
  display: flex;
  justify-content: flex-end;
  position: relative;
  height: 100%;
  white-space: pre-wrap;

  &__body {
    flex: 1;
    display: flex;
    flex-direction: column;
    height: 100%;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
  }

  &__header {
    padding: get-spacing(haapsalu);
    background-color: get-color(extra-light);
    border-bottom: 1px solid get-color(black-coral-2);
  }

  &__group-wrapper {
    flex: 1;
    padding: get-spacing(haapsalu) get-spacing(haapsalu) 0;
    overflow: auto;
    overflow-anchor: none;

    #anchor {
      overflow-anchor: auto;
      height: 1px;
      margin-top: 16px;
    }
  }

  &__toolbar-row {
    border-top: 1px solid get-color(black-coral-2);
    padding: get-spacing(paldiski) get-spacing(haapsalu);
  }

  &__group {
    display: flex;
    flex-direction: column;
    gap: 4px;
    position: relative;
    padding-left: 0px !important;

    &:not(:last-child) {
      margin-bottom: 8px;
    }

    &--buerokratt,
    &--chatbot {
      #{$self} {
        &__group-header {
          align-items: center;
        }

        &__group-initials {
          background-color: get-color(sapphire-blue-10);
          position: relative;
        }

        &__group-name {
          color: get-color(sapphire-blue-10);
          text-align: left;
          margin-left: 0;
          font-size: $veera-font-size-100;
          padding-top: 0;
        }

        &__messages {
          display: flex;
          flex-direction: column;
          gap: 4px;
          align-items: flex-start;
          padding-left: 50px;
        }

        &__message-text {
          background-color: get-color(sapphire-blue-10);
          color: get-color(white);
          margin-left: 0;

          :any-link {
            color: get-color(white);
          }

          &:hover {
            background-color: get-color(sapphire-blue-13);
          }
        }
      }
    }

    &--end-user {
      #{$self} {
        &__group-header {
          display: flex;
          justify-content: flex-end;
          align-items: center;
        }
      }

      &__group-initials {
        background-color: get-color(sapphire-blue-10);
        position: relative !important;
        right: 0px !important;
      }

      &__messages {
        display: flex;
        flex-direction: column;
        gap: 4px;
        align-items: flex-end;
        padding-left: 50px !important;
      }

      &__message-text {
        background-color: get-color(black-coral-10);
        color: get-color(white);

        :any-link {
          background: url('../../static/icons/link-external-white.svg') no-repeat right center;
          padding-right: 1.25em;
          color: white;
          text-decoration: underline;
        }

        &:hover {
          background-color: #535665;
        }
      }
    }

    &--backoffice-user {
      #{$self} {
        &__group-header {
          align-items: center;
        }

        &__group-initials {
          background-color: get-color(black-coral-10);
          color: get-color(white);
          position: relative;
        }

        &__group-name {
          text-align: left;
          margin-left: 0;
          font-size: $veera-font-size-100;
          padding-top: 0;
        }

        &__messages {
          display: flex;
          flex-direction: column;
          gap: 4px;
          align-items: flex-start;
          padding-left: 50px;
        }

        &__message-text {
          background-color: get-color(black-coral-10);
          color: get-color(white);
          margin-left: 0;

          :any-link {
            color: get-color(white);
          }

          &:hover {
            background-color: #535665;
          }
        }
      }
    }
  }

  &__group-header {
    display: flex;
    align-items: flex-start;
    gap: 12px;
    min-height: 40px;
  }

  &__group-initials,
  &__group-event-initials {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 40px;
    height: 40px;
    background-color: get-color(black-coral-1);
    border-radius: 50%;
    font-size: $veera-font-size-80;
    line-height: $veera-line-height-500;
    font-weight: $veera-font-weight-delta;
    color: get-color(black-coral-6);
    position: absolute;
    right: 0;
    top: 0;
  }

  &__group-initials {
    top: 0;
  }

  &__group-event-initials {
    bottom: 23px;
  }

  &__group-name,
  &__group-event-name {
    font-size: $veera-font-size-100;
    line-height: $veera-line-height-500;
    font-weight: $veera-font-weight-delta;
    text-transform: capitalize;
    margin-left: 10rem;
    margin-right: 3rem;
    text-align: right;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 100%;
  }

  &__group-event-name {
    padding-bottom: 4px;
  }

  &__messages {
    display: flex;
    flex-direction: column;
    gap: 4px;
    align-items: flex-end;
    padding-left: 50px;
  }

  &__message {
    display: flex;
    align-items: center;
    gap: 8px;
  }

  &__message-text {
    display: flex;
    align-items: center;
    padding: 4px 8px;
    background-color: get-color(black-coral-0);
    border-radius: 8px 8px 8px 4px;
    font-size: $veera-font-size-100;
    line-height: $veera-line-height-500;
    transition: all .25s ease-out;
    cursor: pointer;
    word-break: break-word;
    white-space: pre-wrap;

    :any-link {
      text-decoration: underline;
    }

    &:hover {
      background-color: get-color(black-coral-1);
    }
  }

  &__message-date {
    color: get-color(black-coral-6);
    font-size: 11px;
    line-height: 20px;
  }

  &__comment-text {
    color: get-color(black);

    &.placeholder {
      color: get-color(black-coral-6);
    }
  }
}

.header-link {
  text-decoration: none;
  padding: 15px 35px;
  font-family: Roboto , sans-serif;
  font-weight: 400;
}

.title {
  font-size: 14px;
  color: get-color(black-coral-6);
  padding-top: 4px;
}

